--- a/app/src/main/res/layout/fragment_rssfeed.xml
+++ b/app/src/main/res/layout/fragment_rssfeed.xml
@@ -6,16 +6,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".MainActivity"
-    tools:showIn="@layout/activity_main">
+    tools:context=".MainActivity">
+
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/newsList"
+        android:id="@+id/rss_recylerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" >
+        app:layout_constraintTop_toTopOf="parent">
 
     </androidx.recyclerview.widget.RecyclerView>
+
+
 </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
