--- a/app/src/main/res/layout/news_item.xml
+++ b/app/src/main/res/layout/news_item.xml
@@ -15,7 +15,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="10dp"
         android:ellipsize="end"
         android:singleLine="true"
         android:text="@string/newstitle"
@@ -23,33 +24,41 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/news_thumbnail"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/news_thumbnail" />
 
     <ImageView
         android:id="@+id/news_thumbnail"
-        android:layout_width="80dp"
-        android:layout_height="100dp"
-        android:layout_marginStart="10dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:layout_marginTop="10dp"
+        android:layout_marginBottom="50dp"
         android:contentDescription="@string/newskeyword"
+        android:scaleType="fitCenter"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@mipmap/ic_launcher" />
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/ic_newspaper" />
 
     <TextView
         android:id="@+id/news_desc"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:ellipsize="end"
-        android:maxLines="2"
+        android:maxLines="3"
         android:text="@string/newsdesc"
         android:textAppearance="@style/TextAppearance.AppCompat.Small"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/news_title"
         app:layout_constraintTop_toBottomOf="@+id/news_title" />
 
+    <!--
     <TextView
         android:id="@+id/news_keyword1"
         android:layout_width="wrap_content"
@@ -84,4 +93,6 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Small"
         app:layout_constraintStart_toEndOf="@id/news_keyword2"
         app:layout_constraintTop_toTopOf="@+id/news_keyword1" />
+        !-->
+
 </androidx.constraintlayout.widget.ConstraintLayout>
